--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,12 +1,13 @@
 Changelog
 =========
 
-1.0b1 (2012/11/13)
+1.0b1 (unreleased)
 ----------------------
+
+- Added upgradestep from version 1.0a1
 
 - Reimplementation based on Twitter Bootstrap 2.2.1 and plonetheme.sunburst
   [erral]
-
 
 
 1.0a1dev (unreleased)
