Added release dates. (Hint: Use zest.releaser or similar when releasing)

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -2,15 +2,15 @@ Changelog
 =========
 
 1.0b2 (unreleased)
-----------------------
+------------------
 
 - Added missing properties for TinyMCE css in base_properties.props [petschki]
 - Fixed folder_contents checkbox inputs.
 - Added i18n:translate in plone.app.layout.viewlet.sections.pt, plone.app.layout.viewlet.search_box.pt and plone.app.layout.viewlets.path_bar.pt
 - Added more missing properties [regebro]
 
-1.0b1 (unreleased)
-----------------------
+1.0b1 (2012-11-14)
+------------------
 
 - Added upgradestep from version 1.0a1
 
@@ -18,7 +18,7 @@ Changelog
   [erral]
 
 
-1.0a1dev (unreleased)
+1.0a1dev (2011-10-16)
 ---------------------
 
 - Initial release
