add Plone 4.1.x profile. Fixes #1

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,6 +4,7 @@ Changelog
 1.0b2 (unreleased)
 ------------------
 
+- Add Plone 4.1.x profile [erral]
 - Enable livesearch [erral]
 - Upgrade to Twitter Bootstrap 2.2.2 [erral]
 - Added missing properties for TinyMCE css in base_properties.props [petschki]
