--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,6 +4,8 @@ Changelog
 1.0b2 (unreleased)
 ------------------
 
+- Fix bootstrap integration JS to avoid jQuery errors and make collection criteria
+  configuration work [erral]
 - Add uninstall support [erral]
 - Add Plone 4.1.x profile [erral]
 - Enable livesearch [erral]
