--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,11 @@
 Changelog
 =========
 
+1.0b3 (2012-12-11)
+-------------------
+
+- Brown bag release. I had my git environment messed-up [erral]
+
 1.0b2 (2012-12-11)
 ------------------
 
