--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,6 +4,9 @@ Changelog
 1.0b4 (UNRELEASED)
 --------------------
 
+- Remove label class from ArchetypesSelectionWidget class tag [libargutxi] 
+- Prepend ArchetypesSelectionWidget radio input into label [libargutxi]
+
 1.0b3 (2012-12-11)
 -------------------
 
