--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -6,6 +6,7 @@ Changelog
 
 - Remove label class from ArchetypesSelectionWidget class tag [libargutxi] 
 - Prepend ArchetypesSelectionWidget radio input into label [libargutxi]
+- Changed the main menu creation view using the plone standard method [libargutxi]
 
 1.0b3 (2012-12-11)
 -------------------
