--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -4,9 +4,10 @@ Changelog
 1.0b4 (UNRELEASED)
 --------------------
 
-- Remove label class from ArchetypesSelectionWidget class tag [libargutxi] 
+- Remove label class from ArchetypesSelectionWidget class tag [libargutxi]
 - Prepend ArchetypesSelectionWidget radio input into label [libargutxi]
 - Changed the main menu creation view using the plone standard method [libargutxi]
+- Fix personal_bar template, it was broken if you just had 1 action.
 
 1.0b3 (2012-12-11)
 -------------------
