--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -10,6 +10,7 @@ Changelog
 - Fix personal_bar template, it was broken if you just had 1 action. [erral]
 - Upgrade to Twitter Bootstrap 2.3.0 [erral]
 - Move glipycons image into a directory called 'img', it's a requirement of the bootstrap css file [erral]
+- Fix selected class in view [erral]
 
 1.0b3 (2012-12-11)
 -------------------
