--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,8 +1,13 @@
 Changelog
 =========
 
-1.0 (UNRELEASED)
+1.0 (2014-01-24)
 ----------------------
+
+- Fix TinyMCE plugin templates [erral]
+- Remove kss spinner from main_template [erral]
+- Control panel alerts are bootstrap alerts [rpatterson]
+
 
 1.0rc1 (2013-04-26)
 --------------------
