--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,11 @@
 Changelog
 =========
 
+2.0 (UNRELEASED)
+-------------------
+
+- Drop Twitter Bootstrap 2.3.x support, now version 3.0 is required [erral]
+
 1.0 (2014-01-24)
 ----------------------
 
